cdk8s/dist/burrito.k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    tailscale.com/proxy-group: ingress-proxies
  name: burrito-server-tailscale
  namespace: burrito-system
spec:
  defaultBackend:
    service:
      name: burrito-server
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - burrito-prod
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-route53
    external-dns.alpha.kubernetes.io/hostname: burrito.prod.whereisdana.today
  name: burrito-server-traefik
  namespace: burrito-system
spec:
  ingressClassName: traefik
  rules:
    - host: burrito.prod.whereisdana.today
      http:
        paths:
          - backend:
              service:
                name: burrito-server
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - burrito.prod.whereisdana.today
      secretName: burrito-server-tls
